log/build_2024-11-25_16-15-40/turtlebot_controller/stderr.log
  File "/home/ste/my_ros2_ws/install/turtlebot_controller/lib/python3.10/site-packages/script_python/move_turtle_AB.py", line 52
    0.0, 0.0, 0.0, 0.0.0, 0.0, 0.0,   # Roll (rotazione attorno a x)
                   ^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?

